Fixed alignment issues on bulk print.

--- a/website/apps/badgebro/static/badgebro/css/badge-bulk-print.css
+++ b/website/apps/badgebro/static/badgebro/css/badge-bulk-print.css
@@ -24,22 +24,22 @@ body {
 
 .badge.badge-1 {
     top: 6.35mm;
-    left: 15.875mm;
+    left: 15.2mm;
 }
 
 .badge.badge-2 {
     top: 6.35mm;
-    left: 19.2mm;
+    left: 18.2mm;
 }
 
 .badge.badge-3 {
-    top: 5.2mm;
-    left: 15.875mm;
+    top: 10.2mm;
+    left: 15.2mm;
 }
 
 .badge.badge-4 {
-    top: 5.2mm;
-    left: 19.2mm;
+    top: 10.2mm;
+    left: 18.2mm;
 }
 
 #type {
